--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,106 @@
-<h1>Home</h1>
+<!-- Wall -->
+<section id="wall">
+    <div id="wall-content">
+        <h1>One Salty Tuna</h1>
+    </div>
+    <div id="slide">
+        <div id="slide-0"></div>
+        <div id="slide-1"></div>
+        <div id="slide-2"></div>
+    </div>
+    <div id="prev-next">
+        <span class="glyphicon glyphicon-chevron-left" id="wall-prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
+            <path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
+            </svg></span>
+        <span class="glyphicon glyphicon-chevron-right" id="wall-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+            <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg></span>
+    </div>
+    <div id="rings"></div>
+</section>
+
+<!-- About -->
+<section id="about">
+    <h2 class="heading">ONE SALTY TUNA</h2>
+    <p> One salty tuna is a sushi restaurant lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+        Excepteur sint occaecat cupidatat non proident, 
+        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+
+<!-- Illustrative Images -->
+<section id="illustrative-image">
+    <div><div id="illustrative-image_nigirizushi"></div><span>Nigirizushi</span></div>
+    <div><div id="illustrative-image_makimono"></div><span>Makimono</span></div>
+    <div><div id="illustrative-image_tempura"></div><span>Tempura</span></div>
+    <div><div id="illustrative-image_sashimi"></div><span>Sashimi</span></div>
+</section>
+
+<!-- Menu -->
+<section id="menu">
+    <h2 class="heading">MENU</h2>
+    <div id="dishes">
+        {{#each sushi}}
+            <div>
+                <img src="{{this.img}}" alt="{{this.name}}">
+                <p class="dish-name">{{this.name}}</p>
+                <p class="describe">{{this.description}}</p>
+                <p class="price">{{this.cost}} $</p>
+            </div>
+        {{/each}}
+    </div>
+</section>
+
+<!-- Quality commit  -->
+<section id="quality-commit">
+    <img src="img/general/quality-commit-wall.jpg" alt="">
+    <div>
+        <h3>Quality Commit</h3>
+        <p>One Salty Tuna is committed to bringing users safe, delicious products with health benefits. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, 
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+</section>
+
+<!-- News -->
+<section id="news">
+    <h2 class="heading">NEWS</h2>
+    <div id="news-item">
+        {{#each news}}
+            <div>
+                <img src="{{this.img}}" alt="">
+                <h3>{{this.name}}</h3>
+                <p>{{this.date}}</p>
+                <button onclick="newsOpen('{{this._id}}')">Detail</button>
+            </div>
+        {{/each}}
+    </div>
+        {{#each news}}
+            <div class="news-detail" id="{{this._id}}">
+                <button class="news-close" onclick="newsClose('{{this._id}}')">X</button>
+                <img src="{{this.img}}" alt="{{this.name}}">
+                <div>
+                    <h3>{{this.name}}</h3>
+                    <p class="news-date">{{this.date}}</p>
+                    <p class="news-content">{{this.content}}</p>
+                </div>
+            </div>
+        {{/each}}
+</section>
+
+<!-- Illustrative Images -->
+<section id="illustrative-image-more">
+    <div style="background-image: url(img/sushi/gunkan/sushi_gunkan-kani.jpg);"></div>
+    <div style="background-image: url(img/sushi/sashimi/sushi_sashimi-amaebi.jpg);"></div>
+    <div style="background-image: url(img/sushi/makimono/sushi_makimono-karaisake.jpg);"></div>
+    <div style="background-image: url(img/sushi/gunkan/sushi_gunkan-tobikowasabi.jpg);"></div>
+    <div style="background-image: url(img/sushi/nigiri/sushi_nigiri-unagi.jpg);"></div>
+    <div style="background-image: url(img/sushi/nigiri/sushi_nigiri-amaebi.jpg);"></div>
+</section>
+
+<script src="/js/home.js"></script>
