--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -95,12 +95,12 @@
 
 <!-- Illustrative Images -->
 <section id="illustrative-image-more">
-    <div style="background-image: url(img/sushi/gunkan/sushi_gunkan-kani.jpg);"></div>
-    <div style="background-image: url(img/sushi/sashimi/sushi_sashimi-amaebi.jpg);"></div>
-    <div style="background-image: url(img/sushi/makimono/sushi_makimono-karaisake.jpg);"></div>
-    <div style="background-image: url(img/sushi/gunkan/sushi_gunkan-tobikowasabi.jpg);"></div>
-    <div style="background-image: url(img/sushi/nigiri/sushi_nigiri-unagi.jpg);"></div>
-    <div style="background-image: url(img/sushi/nigiri/sushi_nigiri-amaebi.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_gunkan-kani.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_sashimi-amaebi.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_makimono-karaisake.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_gunkan-tobikowasabi.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_nigiri-unagi.jpg);"></div>
+    <div style="background-image: url(img/menu/menu_nigiri-amaebi.jpg);"></div>
 </section>
 
-<script src="/js/home.js"></script>
+<script src="/javascript/home.js"></script>
