add account function

--- a/src/resources/views/signup.hbs
+++ b/src/resources/views/signup.hbs
@@ -12,6 +12,7 @@
             <label for="email"></label>
             <input id="submit" type="submit" value="SIGN UP" disabled>
         </form>
+        <p>Already have an account? <a href="/auth/login">Log in</a></p>
     </div>
 </div>
 
