--- a/src/resources/scss/signup.scss
+++ b/src/resources/scss/signup.scss
@@ -24,6 +24,18 @@
     font-size: 30px;
     margin: 15px;
 }
+#signup-form p {
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    transform: translate(-50%);
+    text-align: center;
+    font-size: 15px;
+}
+#signup-form p a {
+    color: $main-color;
+    text-decoration: underline;
+}
 #signup-form form > input {
     overflow: hidden;
     width: 100%;
