--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -13,6 +13,7 @@
     {{#if signup}}<link rel="stylesheet" href="/css/signup.css">{{/if}}
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="/javascript/app.js"></script>
 </head>
 
 <body>
