--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/home.css">
 
+    {{#if about}}<link rel="stylesheet" href="/css/about.css">{{/if}}
+    {{#if menu}}<link rel="stylesheet" href="/css/menu.css">{{/if}}
+    {{#if contact}}<link rel="stylesheet" href="/css/contact.css">{{/if}}
+
+    {{#if order}}<link rel="stylesheet" href="/css/order.css">{{/if}}
+
     {{#if login}}<link rel="stylesheet" href="/css/login.css">{{/if}}
     {{#if signup}}<link rel="stylesheet" href="/css/signup.css">{{/if}}
+    {{#if user}}<link rel="stylesheet" href="/css/user.css">{{/if}}
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="/javascript/app.js"></script>
