--- a/src/resources/views/user.hbs
+++ b/src/resources/views/user.hbs
@@ -1,5 +1,10 @@
-<h1>Wellcome {{username}}</h1>
-<h1>Wellcome {{username}}</h1>
-<h1>Wellcome {{username}}</h1>
-<h1>Wellcome {{username}}</h1>
+<section id="user-wallpaper">
+        <img src="/img/general/wallpaper-2.jpg" alt="">
+        <h1>Welcome, {{username}}</h1>
+    </section>
+
+<h1>Welcome {{username}}</h1>
+<h1>Welcome {{username}}</h1>
+<h1>Welcome {{username}}</h1>
+<h1>Welcome {{username}}</h1>
 <form id="logoutNav" action="/auth/logout" method="POST"><input type="submit" value="LOG OUT"></form>
