--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -20,7 +20,7 @@ body {
 a {
     text-decoration: none;
 }
-#about, #menu, #news, footer, #about-special, #menu-menu, #contact-form {
+#about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
     margin: 5%;
 }
 
@@ -35,7 +35,7 @@ a {
     overflow: hidden;
 }
 [id$=wallpaper] img {
-    height: 100%;
+    height: 200%;
     filter: brightness(0.25);
 }
 [id$=wallpaper] h1 {
@@ -67,7 +67,7 @@ a {
     overflow: visible;
 }
 .heading::before {
-    content: '----- Wellcome to';
+    content: '----- Welcome to';
     color: $main-color;
     font-size: 20px;
     position: absolute;
@@ -112,6 +112,9 @@ nav #account {
     flex-wrap: nowrap;
     flex-direction: row-reverse;
     width: 20%;
+}
+nav #account #userNav {
+    text-transform: uppercase;
 }
 nav #account #signupNav {
     display: none;
@@ -182,7 +185,7 @@ footer h3 {
     .heading {
         font-size: 30px;
     }
-    #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form {
+    #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
         margin: 10%;
     }
     // Site's Wallpaper
@@ -253,7 +256,7 @@ footer h3 {
         position: relative;
         font-size: 35px;
     }
-    #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form {
+    #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
         margin: 5% 10%;
     }
     // Site's Wallpaper
