--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -12,12 +12,27 @@
 #order-form input {
   width: 100%;
   height: 40px;
-  margin-bottom: 4%;
+  margin-top: 4%;
   padding: 10px;
   outline: none;
   border: none;
   border-bottom: gray solid 1px;
   font-size: 15px; }
+
+#order-form #address-input {
+  width: 100%; }
+
+#order-form #address-input input {
+  width: 47%; }
+
+#order-form #address-input select {
+  width: 25%;
+  height: 40px;
+  outline: none;
+  border: none;
+  border-bottom: lightgreen solid 2px;
+  font-size: 15px;
+  margin-top: 4%; }
 
 #order-form #submit {
   position: absolute;
@@ -28,6 +43,16 @@
   background-color: #D3232D;
   color: white;
   font-weight: bold; }
+
+#order-form label {
+  font-size: 12px;
+  color: #D3232D; }
+
+#order-form form input.bad {
+  border-bottom: #D3232D solid 2px; }
+
+#order-form form input.good {
+  border-bottom: lightgreen solid 2px; }
 
 #cart-table {
   margin: 50px 0 150px 0;
