--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -6,7 +6,7 @@
 .active {
   color: #D3232D !important; }
 
-input#submit:disabled {
+input[type="submit"]:disabled {
   background-color: gray !important; }
 
 body {
@@ -17,7 +17,7 @@ body {
 a {
   text-decoration: none; }
 
-#about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
+#about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order, #user-info {
   margin: 5%; }
 
 [id$=wallpaper] {
@@ -166,7 +166,7 @@ footer h3 {
 @media screen and (min-width: 600px) {
   .heading {
     font-size: 30px; }
-  #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
+  #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order, #user-info {
     margin: 10%; }
   [id$=wallpaper] img {
     width: 100%; }
@@ -212,7 +212,7 @@ footer h3 {
   .heading {
     position: relative;
     font-size: 35px; }
-  #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order {
+  #about, #menu, #news, footer, #about-special, #menu-menu, #contact-form, #order, #user-info {
     margin: 5% 10%; }
   [id$=wallpaper] {
     top: 80px;
