--- a/src/resources/scss/login.scss
+++ b/src/resources/scss/login.scss
@@ -13,7 +13,7 @@
     left: 75%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 30%;
+    width: 35%;
     height: 70%;
     padding: 2%;
     background-color: white;
@@ -45,6 +45,7 @@
     height: 40px;
     margin-top: 4%;
     padding: 10px;
+    font-size: 15px;
 }
 #login-form #submit {
     position: absolute;
