--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -10,7 +10,7 @@
   left: 75%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 30%;
+  width: 35%;
   height: 70%;
   padding: 2%;
   background-color: white; }
@@ -41,7 +41,8 @@
   outline: none;
   height: 40px;
   margin-top: 4%;
-  padding: 10px; }
+  padding: 10px;
+  font-size: 15px; }
 
 #login-form #submit {
   position: absolute;
