--- a/src/public/css/signup.css
+++ b/src/public/css/signup.css
@@ -10,7 +10,7 @@
   left: 75%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 30%;
+  width: 35%;
   height: 90%;
   padding: 2%;
   background-color: white; }
@@ -33,17 +33,33 @@
   color: #D3232D;
   text-decoration: underline; }
 
-#signup-form form > input {
+#signup-form form input {
   overflow: hidden;
   width: 100%;
+  outline: none;
   border: none;
   border-bottom: gray solid 1px;
   height: 40px;
   margin-top: 4%;
-  padding: 10px; }
+  padding: 10px;
+  font-size: 15px; }
 
-#signup-form form > input:focus {
-  outline: none; }
+#signup-form #address-input {
+  width: 100%;
+  margin-bottom: 20px; }
+
+#signup-form #address-input input {
+  width: 37%; }
+
+#signup-form #address-input select {
+  width: 30%;
+  height: 40px;
+  outline: none;
+  border: none;
+  border-bottom: lightgreen solid 2px;
+  font-size: 15px;
+  padding-bottom: 1px;
+  margin-top: 4%; }
 
 #signup-form #submit {
   position: absolute;
@@ -60,10 +76,10 @@
   font-size: 12px;
   color: #D3232D; }
 
-#signup-form form > input.bad {
+#signup-form form input.bad {
   border-bottom: #D3232D solid 2px; }
 
-#signup-form form > input.good {
+#signup-form form input.good {
   border-bottom: lightgreen solid 2px; }
 
 #success {
