--- a/src/resources/scss/user.scss
+++ b/src/resources/scss/user.scss
@@ -1,3 +1,114 @@
-#user-wallpaper h1 {
-    text-transform: uppercase;
+@import 'variables';
+
+#user-setting {
+    position: relative;
+    top: 80px;
+    height: 85vh;
+    margin-bottom: 150px;
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('../img/general/wallpaper-0.jpg');
+}
+#user-setting > div {
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 750px;
+    height: 90%;
+    padding: 2% 2% 2% 0;
+    background-color: white;
+}
+#btn {
+    width: 30%;
+    height: 100%;
+    float: left;
+    position: relative;
+    padding-top: 30px;
+}
+#btn > div:hover {
+    cursor: pointer;
+}
+#btn .btn-current {
+    color: $main-color;
+    border-bottom: $main-color solid 2px;
+}
+#btn div {
+    width: 70%;
+    height: 40px;
+    margin: auto;
+    border-bottom: gray solid 1px;
+    margin-bottom: 20px;
+}
+#btn #logout {
+    position: absolute;
+    left: 50%;
+    top: 89%;
+    transform: translate(-50%);
+    width: 60%;
+}
+#btn #logout input {
+    width: 100%;
+    height: 40px;
+    background-color: $main-color;
+    color: white;
+    font-weight: bold;
+    outline: none;
+    border: none;
+}
+#box {
+    position: relative;
+    width: 70%;
+    height: 100%;
+    padding-left: 5%;
+    border-left: gray solid 1px;
+}
+#box h3 {
+    color: $main-color;
+    font-size: 25px;
+}
+#box input {
+    width: 100%;
+    height: 40px;
+    outline: none;
+    border: none;
+    border-bottom: gray solid 1px;
+    margin-top: 4%;
+    padding: 10px;
+    font-size: 15px;
+}
+#box #address-input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+#box #address-input input {
+    width: 38%;
+}
+#box #address-input select {
+    width: 30%;
+    height: 40px;
+    outline: none;
+    border: none;
+    border-bottom: lightgreen solid 2px;
+    font-size: 15px;
+    padding-bottom: 1px;
+    margin-top: 4%;
+}
+#box [type="submit"] {
+    position: absolute;
+    width: 50%;
+    left: 27.5%;
+    top: 85%;
+    border: none;
+    background-color: $main-color;
+    color: white;
+    font-weight: bold;
+}
+#box label {
+    font-size: 12px;
+    color: $main-color;
+}
+#box form input.bad {
+    border-bottom: $main-color solid 2px;
+}
+#box form input.good {
+    border-bottom: lightgreen solid 2px;
 }
