--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -17,7 +17,7 @@
 
     {{#if login}}<link rel="stylesheet" href="/css/login.css">{{/if}}
     {{#if signup}}<link rel="stylesheet" href="/css/signup.css">{{/if}}
-    {{#if user}}<link rel="stylesheet" href="/css/user.css">{{/if}}
+    {{#if userSetting}}<link rel="stylesheet" href="/css/user.css">{{/if}}
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="/javascript/app.js"></script>
