--- a/src/resources/views/signup.hbs
+++ b/src/resources/views/signup.hbs
@@ -6,10 +6,45 @@
             <label for="username">{{#if notAvailable}} This user name is not available {{/if}}</label>
             <input id="password" type="password" name="password" placeholder="Password" onblur="passwordValidate()">
             <label for="password"></label>
-            <input id="phone" type="tel" name="phone" placeholder="Phone" onblur="phoneValidate()" value="{{user.phone}}" class="{{#if notAvailable}}good{{/if}}">
+            <input id="phone" type="text" name="phone" placeholder="Phone" onblur="phoneValidate()" value="{{user.phone}}" class="{{#if notAvailable}}good{{/if}}">
             <label for="phone"></label>
-            <input id="address" type="text" name="address" placeholder="Address" onblur="addressValidate()" value="{{user.address}}" class="{{#if notAvailable}}good{{/if}}">
-            <label for="address"></label>
+            <div id="address-input">
+                <input id="address" type="text" name="detail" placeholder="Address" value="{{user.address.detail}}" onblur="addressValidate()" class="{{#if user.address}}good{{/if}}"></input>
+                <select name="dist" id="dist" {{#if user.address.city}}{{#unless user.address.dist}}disabled{{/unless}}{{/if}}>
+                    {{#if user.address.dist}}<option id="userDist" value="{{user.address.dist}}">{{user.address.dist}}</option>{{/if}}
+                    {{#if user.address.city}}{{#unless user.address.dist}}<option id="userDist" value=""></option>{{/unless}}{{/if}}
+                    <option value="1st Dist">1st Dist</option>
+                    <option value="2nd Dist">2nd Dist</option>
+                    <option value="3rd Dist">3rd Dist</option>
+                    <option value="4th Dist">4th Dist</option>
+                    <option value="5th Dist">5th Dist</option>
+                    <option value="6th Dist">6th Dist</option>
+                    <option value="7th Dist">7th Dist</option>
+                    <option value="8th Dist">8th Dist</option>
+                    <option value="9th Dist">9th Dist</option>
+                    <option value="10th Dist">10th Dist</option>
+                    <option value="11th Dist">11th Dist</option>
+                    <option value="12th Dist">12th Dist</option>
+                    <option value="Binh Thanh Dist">Binh Thanh Dist</option>
+                    <option value="Thu Duc Dist">Thu Duc Dist</option>
+                    <option value="Go Vap Dist">Go Vap Dist</option>
+                    <option value="Phu Nhuan Dist">Phu Nhuan Dist</option>
+                    <option value="Tuan Binh Dist">Tan Binh Dist</option>
+                    <option value="Tan Phu Dist">Tan Phu Dist</option>
+                    <option value="Binh Tan Dist">Binh Tan Dist</option>
+                    <option value="Nha Be Dist">Nha Be Dist</option>
+                    <option value="Hoc Mon Dist">Hoc Mon Dist</option>
+                    <option value="Binh Chanh Dist">Binh Chanh Dist</option>
+                    <option value="Cu Chi Dist">Cu Chi Dist</option>
+                    <option value="Can Gio Dist">Can Gio Dist</option>
+                </select>
+                <select name="city" id="city" value="{{user.address.city}}" onchange="citySelect()">
+                    {{#if user.address.city}}<option id="userCity" value="{{user.address.city}}">{{user.address.city}}</option>{{/if}}
+                    <option value="Ho Chi Minh City">Ho Chi Minh City</option>
+                    <option value="Other">Other</option>
+                </select>
+                <label for="address"></label>
+            </div>
             <input id="submit" type="submit" value="SIGN UP" disabled>
         </form>
         <p>Already have an account? <a href="/auth/login">Log in</a></p>
